tests/ui/consts/required-consts/collect-in-dead-fnptr-in-const.noopt.stderr
error[E0080]: evaluation of `Late::<i32>::FAIL` failed
  --> $DIR/collect-in-dead-fnptr-in-const.rs:9:22
   |
LL |     const FAIL: () = panic!();
   |                      ^^^^^^^^ evaluation panicked: explicit panic
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant encountered
  --> $DIR/collect-in-dead-fnptr-in-const.rs:10:28
   |
LL |     const FNPTR: fn() = || Self::FAIL;
   |                            ^^^^^^^^^^

note: the above error was encountered while instantiating `fn Late::<i32>::FNPTR::{closure#0}`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
